--- a/English_vocabulary_test/public/css/123.css
+++ b/English_vocabulary_test/public/css/123.css
@@ -3,3 +3,24 @@
   font-size: 24px;
   color: blue;
 }
+
+/*  */
+.chaptersNumber{
+  display: inline-block;  
+  text-align: center;
+  width: 20px;
+  background-color: rgb(220, 220, 220);
+  margin-left:10px; /* 왼쪽 margin 10px */
+  padding:20px; /* padding 20px */
+  border: 1px solid rgba(73, 73, 255, 0.832);/* 테두리 두께, 스타일, 색상 */
+}
+
+/* 마우스를 위에 올렸을때 색상 변경 */
+.chaptersNumber:hover{
+  background-color: gr; /* 배경색 변경 */
+}
+
+
+#myForm{
+  margin-top: 6%;
+}
